# Nexus

./: .gitattributes  .gitignore  CLAUDE.md  Nexus-Dev.bat  Nexus-Dev.vbs  RELEASE.md  SETUP.md  STATUS.md  aufgaben Nexus.txt  nexus.config.example.json  nexus.config.json  package-lock.json  package.json  restart.bat  setup.ps1  start-app - Verknüpfung.lnk  start-app.bat  tmp-trunc.html
.claude/: launch.json
.github/workflows/: release.yml  tauri-release.yml
design-mockups/: variante-a-terminal.html  variante-b-soft-dark.html  variante-c-glass.html  variante-d-editorial.html  variante-e-workbench.html  variante-f-map-first.html  variante-g-kanban-inbox-dark.html  variante-g-kanban-inbox.html  variante-h-commander.html  variante-i-focus-light.html  variante-i-focus-reader-dark.html  variante-j-command-center.html
electron/: main.js  piper.js  preload.cjs  update-window.js  updater.js
public/: help.html  index.html  update.html  wizard.html
rules/: Arbeitsweise.md  Mein-Setup.template.md  README.md  Session-Start.md
scripts/: afterPack.cjs  dev-tauri.mjs  fetch-cm6.mjs  fetch-node-sidecar.mjs  gen-icon-dev.mjs  gen-icon.mjs  install-hooks.mjs  prepare-sidecar-resources.mjs  safe-edit.mjs  verify-html.mjs
scripts/hooks/: pre-commit
src/: claude-connect.js  cli.js  dataview.js  db.js  indexer.js  parse.js  paths.js  piper.js  server.js  tools.js  ui-server.js  vault-check.js  vault-registry.js
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
test/: claude-connect.test.mjs  dataview.test.mjs  live-preview.test.mjs  mcp-client.mjs  mcp-launch.test.mjs  mcp-packaged.test.mjs  md-render.test.mjs  parse.test.mjs  smoke.js  vault-check.test.mjs  vortrag.test.mjs
