[package]
name = "app"
version = "1.0.0"
description = "Nexus – persönlicher Wissens-Workspace mit Claude-Anbindung"
authors = ["Paul-Johannes Hunold"]
license = ""
repository = "https://github.com/Pjhannes/Nexus"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
# devtools auch im Release: Paritaet zum Electron-Menue "Entwicklerwerkzeuge"
tauri = { version = "2.11.3", features = ["devtools"] }
tauri-plugin-log = "2"
# Phase 2: Shell-Plugins (Paritaet zu Electron-Funktionen)
tauri-plugin-single-instance = "2"   # Zweitstart fokussiert bestehendes Fenster (statt EADDRINUSE)
tauri-plugin-dialog = "2"            # nativer Ordner-Picker im Wizard
tauri-plugin-autostart = "2"         # "Beim Windows-Start starten" (Wizard-Option)
tauri-plugin-opener = "2"            # Vault-Ordner im Explorer oeffnen
tauri-plugin-updater = "2"           # In-App-Auto-Update (GitHub Releases, minisign-signiert)

[target.'cfg(windows)'.dependencies]
# Nur fuer SetCurrentProcessExplicitAppUserModelID (Taskleisten-Identitaet/-Gruppierung).
# Electron rief das frueher explizit selbst auf (app.setAppUserModelId) – ob Tauri es
# ungefragt tut, war laut Review nicht sicher zu verifizieren; deshalb explizit statt
# auf einen unbestaetigten Default zu vertrauen (Phase-2-TODO, jetzt geschlossen).
windows = { version = "0.61", features = ["Win32_UI_Shell", "Win32_Foundation"] }
